[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Enemy1.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/PrimaryAtack.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/AlternativeAtack.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HealthBarEnemy.tscn" type="PackedScene" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 0, 90.6, -15.39, 4.81, -56.21, -10.8, -55.05, -42.32, -33.27, -78.07, 0, -86.66, 33.98, -77.81, 55.77, -41.11, 55.89, -10.68, 16.56, 5.34, 0, 90.14 )

[node name="Enemy1" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Visible" type="VisibilityNotifier2D" parent="."]

[node name="EnemyAtackTimer" type="Timer" parent="."]

[node name="PrimaryAtack" parent="." instance=ExtResource( 3 )]

[node name="AlternativeAtack" parent="." instance=ExtResource( 4 )]

[node name="EnemyPos" type="Position2D" parent="."]

[node name="HealthBarEnemy" parent="." instance=ExtResource( 5 )]
margin_left = -18.3952
margin_top = -41.4623
margin_right = -18.3952
margin_bottom = -41.4623
rect_scale = Vector2( 0.1, 0.1 )
[connection signal="screen_exited" from="Visible" to="." method="_on_Visible_screen_exited"]
[connection signal="timeout" from="EnemyAtackTimer" to="." method="_on_EnemyAtackTimer_timeout"]
[connection signal="death" from="HealthBarEnemy" to="." method="_on_HealthBarEnemy_death"]
